# mipt-cs-samples

./: .travis.yml  CMakeLists.txt  README.md  exam.md
graphs/: CMakeLists.txt  README.md
graphs/01-input-output/: CMakeLists.txt  README.md  edge-list-to-adjacency-list.cpp  edge-list.txt
linux-system-programming-overview/: CMakeLists.txt  README.md
linux-system-programming-overview/00-intro/: CMakeLists.txt  README.md  asm.cpp
linux-system-programming-overview/01-fork/: CMakeLists.txt  README.md  fork-and-wait.cpp  fork.cpp  pid.cpp  several-forks-then-wait.cpp  true-and-false.cpp
linux-system-programming-overview/02-argc-argv-envp/: CMakeLists.txt  Makefile  README.md  arguments.cpp  env.cpp  the-lognest-env-var-name.cpp
linux-system-programming-overview/03-files/: CMakeLists.txt  copy.cpp  read.cpp  write.cpp
linux-system-programming-overview/03-pipes/: Makefile  capture-process-output.cpp  iostream-over-pipe.cpp
linux-system-programming-overview/04-pipes/: CMakeLists.txt  README.md  capture-process-output.cpp  copy-over-pipe.cpp  one-way-pipe.cpp  pipe-calculator.cpp
linux-system-programming-overview/05-sysv-ipc/: CMakeLists.txt  README.md  integral.cpp  msg_calc.cpp  semaphore_as_mutex.cpp  semaphore_order.cpp  shmem.cpp  sizeof.cpp
linux-system-programming-overview/06-posix-threads/: CMakeLists.txt  Makefile  README.md  mt-sort.cpp  threads.cpp
linux-system-programming-overview/07-sockets/: CMakeLists.txt  README.md  echo.cpp  http_get_over_proxy.cpp
mpi-intro/: CMakeLists.txt  README.md
mpi-intro/01-hello-world/: CMakeLists.txt  README.md  hello.cpp
mpi-intro/02-point-to-point/: CMakeLists.txt  README.md  ping_pong.cpp  ring.cpp  send_receive.cpp
parallel-computing-overview/: Makefile
parallel-computing-overview/00-intro/: asm.cpp
parallel-computing-overview/01-fork/: several-forks-then-wait.cpp  true-and-false.cpp
parallel-computing-overview/01-intro/: Makefile  README.md  fork-and-wait.cpp  fork-bomb.cpp
parallel-computing-overview/02-argc-argv-envp/: env.cpp  get-env-variable.cpp  the-lognest-env-var-name.cpp
python3/base64/: decode.py  encode.py  lib.py  tests.py
